# DayKountdown-Plasmoid

./: CMakeLists.txt  README.md  daykountdown-plasmoid.kdev4
daykountdown-plasmoid/: metadata.desktop
daykountdown-plasmoid/contents/ui/: main.qml
plasmoid/contents/ui/: DKPlasmoidCard.qml  FullRepresentation.qml  main.qml
src/: CMakeLists.txt  dkplasmoid.cpp  dkplasmoid.h  kountdownmodel.cpp  kountdownmodel.h
src/package/: metadata.desktop
src/package/contents/config/: config.qml  main.xml
src/package/contents/ui/: CompactRepresentation.qml  ConfigCompact.qml  ConfigGeneral.qml  DKPlasmoidCard.qml  FullRepresentation.qml  main.qml
